Checkpoint: Rebrand completo: Creative Loop - Nova logo (gradiente azul→roxo→rosa), paleta de cores atualizada, nome e metadados alterados em todo o sistema

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,23 +1,23 @@
 {
-  "name": "Gerador 3",
-  "short_name": "Gerador 3",
-  "description": "Crie conteúdo viral em minutos com IA",
+  "name": "Creative Loop - IG & TT Content",
+  "short_name": "Creative Loop",
+  "description": "Crie conteúdo viral para Instagram e TikTok com IA",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0A0A0F",
-  "theme_color": "#A855F7",
+  "theme_color": "#00D4FF",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "/logo.jpg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any maskable"
     },
     {
-      "src": "/logo.png",
+      "src": "/logo.jpg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any maskable"
     }
   ],
